Ficheros de Generador Codigos De Barras 14-10-25

--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
         <button id="replicateBtn">Replicar PDF Subido</button>
     </div>
 
+    <div id="loader">
+        <p>Procesando, por favor espera...</p>
+        <div class="spinner"></div>
+    </div>
+</div>
+
 <script src="script.js"></script>
+
 </body>
 </html>
